Ensure there is sufficient vertical space above a text-editor-v1
Associated issue: https://github.com/wikisim/wikisim-frontend/issues/46

Had to also change the style for wikisim-select otherwise the
elements for significant figures and format do not line up.

--- a/src/text_editor/TextEditorV1.css
+++ b/src/text_editor/TextEditorV1.css
@@ -1,7 +1,8 @@
 
 .text-editor-v1
 {
-    margin-top: var(--vgap-small);
+    /* Changed to mid.  See https://github.com/wikisim/wikisim-frontend/issues/46 */
+    margin-top: var(--vgap-mid);
     display: flex;
     flex: 1 1;
 }
