--- a/src/ui_components/Select.css
+++ b/src/ui_components/Select.css
@@ -1,6 +1,7 @@
 .wikisim-select
 {
-    margin-top: var(--vgap-small);
+    /* Changed to mid.  See https://github.com/wikisim/wikisim-frontend/issues/46 */
+    margin-top: var(--vgap-mid);
 }
 
 .wikisim-select .mantine-Select-root
